# Multi-Agent-System

./: .env  README.md
multi-agent-system/: .env.example  .gitignore  Makefile  config.py  database.py  memory.py  pyproject.toml  requirements.txt  state.py  visualization.py
multi-agent-system/agents/: __init__.py  invoice.py  music.py  supervisor.py  swarm.py
multi-agent-system/graph/: __init__.py  factory.py
multi-agent-system/nodes/: __init__.py  memory_nodes.py  verification.py
multi-agent-system/prompts/: __init__.py  invoice.py  memory.py  music.py  supervisor.py
multi-agent-system/scripts/: __init__.py  run_evals.py  run_final_graph.py  run_swarm_demo.py
multi-agent-system/tools/: __init__.py  invoice.py  music.py
